# ahrs

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CITATION.cff  ExampleData.mat  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/: FUNDING.yml
.github/workflows/: python-app.yml  pythonbuild.yml  pythonpublish.yml
ahrs/: __init__.py  maths.py  quaternion.py  versioning.py
ahrs/common/: __init__.py  constants.py  dcm.py  frames.py  geometry.py  mathfuncs.py  orientation.py  quaternion.py
ahrs/filters/: __init__.py  angular.py  aqua.py  complementary.py  davenport.py  ekf.py  famc.py  fkf.py  flae.py  fourati.py  fqa.py  gravityquaternion.py  madgwick.py  mahony.py  oleq.py  quest.py  roleq.py  saam.py  tilt.py  triad.py  ukf.py
ahrs/utils/: __init__.py  core.py  geodesy.py  io.py  metrics.py  plot.py  sensors.py  wgs84.py  wmm.py
docs/source/: Chiaverini.rst  angular.rst  aqua.rst  attitude_representations.rst  classDCM.rst  classQuaternion.rst  classQuaternionArray.rst  complementary.rst  conf.py  constants.rst  dcm.rst  ekf.rst  filters.rst  flae.rst  fourati.rst  frames.rst  funSLERP.rst  geodesy.rst  index.rst  installation.rst  madgwick.rst  metrics.angular_distance.rst  metrics.chordal.rst  metrics.euclidean.rst  metrics.identity_deviation.rst  metrics.qad.rst  metrics.qcip.rst  metrics.qdist.rst  metrics.qeip.rst  metrics.rmse.rst  metrics.rmse_matrices.rst  metrics.rst  nomenclature.rst  oleq.rst  (+12 more)
notebooks/: Showcase.ipynb  tools.py
tests/: repoIMU.csv  test.py  test_common_tools.py  test_core_functions.py  test_dcm.py  test_ekf.py  test_estimators.py  test_filters.py  test_fourati.py  test_imports.py  test_madgwick.py  test_mahony.py  test_metrics.py  test_new.py  test_quaternions.py  test_wgs84.py  test_wmm.py
tools/: versioning.py
(+118 files in other folders)
