[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "AHRS"
dynamic = ["version"]
description = "Attitude and Heading Reference Systems."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Mario Garcia", email = "mariogc@protonmail.com"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.17",
    "docutils>=0.18.1",
]

[tool.hatch.version]
path = "ahrs/__init__.py"
pattern = "^__version__ = ['\"](?P<version>[^'\"]*)['\"]"

[project.urls]
"Homepage" = "https://github.com/Mayitzin/ahrs/"
"Source Code" = "https://github.com/Mayitzin/ahrs/"
"Bug Tracker" = "https://github.com/Mayitzin/ahrs/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
]
docs = [
    "sphinx",
    "sphinxcontrib-bibtex",
    "pydata_sphinx_theme"
]
build = [
    "hatch",
    "hatchling",
]
